Fix Java 17 compatibility issues
Co-authored-by: andrewafarias <114031921+andrewafarias@users.noreply.github.com>